--- a/style.css
+++ b/style.css
@@ -71,5 +71,60 @@ body {
     transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s;
 }
 .card .main .left {
+    left: 0;
+}
+.card .main .right {
+    right: 0;
+    transform: translateX(50%) scale(-1, 1);
+}
+.card .main .title {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 90px;
+    font-weight: bold;
+    font-size: 25px;
+    opacity: 0;
+    z-index: -1;
+    transition: all 0.2s ease-out 0s;
+}
+.card .main .button-container {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.card .main .button-container .button {
+    position: absolute;
+    transform: translateX(-50%);
+    padding: 5px 10px;
+    clip-path: polygon(0 0, 100% 0, 81% 100%, 21% 100%);
+    background: black;
+    border: none;
+    color: white;
+    display: grid;
+    place-content: center;
+    transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+.card .main .button-container .button .svg {
+    width: 15px;
+    transition: all 0.2s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+.card .main .button-container .button:nth-child(1) {
+    bottom: 300px;
+    transition-delay: 0.4s;
+}
+.card .main .button-container .button:nth-child(2) {
+    bottom: 300px;
+    transition-delay: 0.6s;
+}
+.card .main .button-container .button:nth-child(3) {
+    bottom: 300px;
+    transition-delay: 0.8s;
+}
+.card .main .button-container .button:hover .svg {
+    transform: scale(1.2);
+}
+.card .main .button-container .button:active .svg {
     
 }
