--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -126,5 +126,36 @@ body {
     transform: scale(1.2);
 }
 .card .main .button-container .button:active .svg {
-    
+    transform: scale(0.7);
+}
+
+.card:hover .main {
+    transform: scale(1.1);
+}
+.card:hover .main .top {
+    top: -50px;
+}
+.card:hover .main .left {
+    left: -50px;
+    transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.1s;
+}
+.card:hover .main .right {
+    right: -50px;
+    transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.1s;
+}
+.card:hover .main .title {
+    opacity: 1;
+    transition: all 0.2s ease-out 1.3s;
+}
+.card:hover .main .button-container .button:nth-child(1) {
+    bottom: 80px;
+    transition-delay: 0.8s;
+}
+.card:hover .main .button-container .button:nth-child(2) {
+    bottom: 40px;
+    transition-delay: 0.6s;
+}
+.card:hover .main .button-container .button:nth-child(3) {
+    bottom: 0px;
+    transition-delay: 0.4s;
 }
